[metadata]
name = audobject
author = Johannes Wagner, Hagen Wierstorf
author-email = jwagner@audeering.com, wierstorf@audeering.com
url = https://gitlab.audeering.com/tools/audobject/
project-urls =
    Documentation = http://tools.pp.audeering.com/audobject/
description = Generic object interface
long-description = file: README.rst, CHANGELOG.rst
license = audEERING
license-file = LICENSE
keywords = example
platforms= any
classifiers =
    Development Status :: 3 - Alpha
    License :: audEERING
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audeer >=1.5.1, <1.7.0
    oyaml
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --flake8
    --doctest-plus
    --cov=audobject
    --cov-fail-under=100
    --cov-report term-missing
xfail_strict = true

[flake8]
ignore =
    W503  # math, https://github.com/PyCQA/pycodestyle/issues/513
    __init__.py F401  # ignore unused imports
