[metadata]
name = audobject
author = Johannes Wagner, Hagen Wierstorf
author-email = jwagner@audeering.com, hwierstorf@audeering.com
url = https://github.com/audeering/audobject/
project-urls =
    Documentation = https://audeering.github.io/audobject/
description = Generic object interface
long-description = file: README.rst, CHANGELOG.rst
license = MIT
license-file = LICENSE
keywords = serialization, yaml
platforms= any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audeer >=1.7.0
    oyaml
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --flake8
    --doctest-plus
    --cov=audobject
    --cov-fail-under=100
    --cov-report xml
    --cov-report term-missing
xfail_strict = true

[flake8]
ignore =
    W503  # math, https://github.com/PyCQA/pycodestyle/issues/513
    __init__.py F401  # ignore unused imports
