[metadata]
name = audobject
author = Johannes Wagner, Hagen Wierstorf
author_email = jwagner@audeering.com, hwierstorf@audeering.com
url = https://github.com/audeering/audobject/
project_urls =
    Documentation = https://audeering.github.io/audobject/
description = Generic object interface
long_description = file: README.rst, CHANGELOG.rst
license = MIT
license_file = LICENSE
keywords = serialization, yaml
platforms= any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audeer >=1.18.0
    importlib-metadata >=4.8.0  # can be replaced with 'importlib.metadata' once we drop support for Python 3.6 / 3.7
    oyaml
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --doctest-plus
    --cov=audobject
    --cov-fail-under=100
    --cov-report xml
    --cov-report term-missing
xfail_strict = true

[flake8]
exclude =
    .eggs,
    build,
extend-ignore =
    # math, https://github.com/PyCQA/pycodestyle/issues/513
    W503,
per-file-ignores =
    # ignore unused imports
    __init__.py: F401,
